files/iptables-el5
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -p udp -m udp --dport 5405 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 5405 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 11111 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 21064 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 16851 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 14567 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 50006 -j ACCEPT
-A INPUT -m state --state NEW -p udp -m udp --dport 50007 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 50008 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 50009 -j ACCEPT
-A INPUT -m state --state NEW -p tcp -m tcp --dport 1229 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
